added overview to chapter 1 references for PMD and findbugs

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -17,24 +17,54 @@
     going to be critical.  Just as important will be the effective 
     measurement of how this software is produced.  
     
-    The goal of this work is to provide a basis of what data should 
-    be collected by a software development organization, and how that data
-    should be used to formulate a single number representing the 
-    software development score of an organization. A framework to 
-    achieve the score will be presented.  The  score
-    is not to be comparative between organizations, but to 
-    rather form a historical baseline for a specific organization.  Also, a software
-    system to collect, calculate, and report the score will be presented.
+    This work 
+    provides a technique for a software development organization to create
+    a single number score which indicates the overall performance
+    of the organization. The
+    score is based upon data collected for 5 result indicators
+    of a software development organization: quality, availability,
+    satisfaction, schedule, and requirements.  It is not meant
+    to be comparative between organizations, but to 
+    form a historical baseline for a specific organization.  
 
-%\subsection{OVERVIEW}
+\subsection{OVERVIEW}
+    
+    Software development organizations are no different than 
+    any other business or organization.  There are: tasks
+    to be completed, goals to achieve (or miss), and measurements
+    to be analyzed.  One difficulty with software development
+    is the varied number and amount of measurements to be used. 
+    It can be difficult to determine the correct activities
+    to measure and the appropriate mechanism to report the measure.
+    This has led organizations to either collect too little information
+    or to collect too much information.  Another problem is the 
+    inconsistency of the reported measures.  It is difficult to compare
+    historical performance if the same measurements are not consistent
+    throughout the recent history of an organization. 
+    
+    Software development organizations need a framework to define
+    what measurements should be tracked and how those measurements
+    should be reported.  The MPI framework provides a solid foundation
+    for a consistent evaluation.  It should also provide a broad
+    view of the overall organization.  It is common for software development
+    organizations to measure and focus soley on the source code
+    being produced.  However, a software development organization does more
+    than just produce source code.  There is documentation to be
+    written, testcases to be created, systems to be deployed, and
+    decisions to be made.  The framework provides an evaluation
+    of the overall software development organization.
+    
+    The framework will produce a single number score for each of 
+    the five result indicators as well as a single overall score.  
+    It will be able to provide a quick evaluation of the organization.
+    The scores will enable performance to be consistently measured
+    and compared.
 
-%    Throughout the history of software development, many values have been 
-%    collected and used to measure the effectiveness of software development. 
-
-%    What is the goal? how will it help?  Expand on the thesis statement here
-%    score the overall organization
-%    produce a single a number score
-%    don't focus too heavily on the source code
+    Other attempts at evaluating a software development organization
+    have been presented, but none produce a single number score for
+    the entire effort of the software development organization. 
+    The following are attempts to evaluate all or parts of 
+    software development.
 
 
 
