--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -1,7 +1,7 @@
 \documentclass[SDSUThesis.tex]{subfiles} 
 \begin{document}
 
-\section{DATA-DRIVEN SOFTWARE ENGINEERING}
+\section{MEASURING A SDO}
 
 Anything can be measured \cite{Hubbard2010}.
 
@@ -18,7 +18,7 @@ A metric can be defined as the science of indirect measurement.
         in the software code
         \item Source Code Analysis - Tools that determine whether 
         code adheres to specified set of rules. Common 
-        examples are PMD and findbugs.
+        examples are PMD and findbugs \cite{PMD, Findbugs}.
     \end{itemize}
 
 Data Driven Software Engineering not Data Driven Software Development
@@ -41,11 +41,17 @@ More information on the indicators can be found
 in chapter 1 of \cite{parmenter2010}
 as well as \cite{florac1999,kaplan1992}.
 
-\subsection{RESULT INDICATORS FOR SDOs}
+\subsection{RESULT INDICATORS FOR SDO}
     This section will cover the potential result indicators for an SDO.
+    
+\subsection{KEY RESULT INDICATORS FOR SDO}
 
-\subsection{PERFORMANCE INDICATORS FOR SDOs}
+
+\subsection{PERFORMANCE INDICATORS FOR SDO}
     This section will cover the potential performance indicators for an SDO.
+    
+    
+\subsection{KEY PERFORMANCE INDICATORS FOR SDO}
     
 
 \subsection{BALANCED SCORECARD}
@@ -65,7 +71,7 @@ characteristics.
 Balanced scorecards are great for displaying the important information about
 and organization.  However, a balanced scorecard does not specify what
 exactly needs to be tracked.  It is also not specific to an SDO and 
-it does produce a single number.
+it does not produce a single number.
 
 This info comes from \cite{parmenter2010}.
 
