--- a/references.bib
+++ b/references.bib
@@ -239,6 +239,23 @@
     pages={14},
     year={2012}
 }
+@inproceedings{Findbugs,
+    author = {Ayewah, Nathaniel and Pugh, William and Morgenthaler, J. David and Penix, John and Zhou, YuQian},
+    title = {Evaluating Static Analysis Defect Warnings on Production Software},
+    booktitle = {Proceedings of the 7th ACM SIGPLAN-SIGSOFT Workshop on Program Analysis for Software Tools and Engineering},
+    series = {PASTE '07},
+    year = {2007},
+    isbn = {978-1-59593-595-3},
+    location = {San Diego, California, USA},
+    pages = {1--8},
+    numpages = {8},
+    url = {http://doi.acm.org/10.1145/1251535.1251536},
+    doi = {10.1145/1251535.1251536},
+    acmid = {1251536},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {FindBugs, Java, bug patterns, bugs, false positives, software defects, software quality, static analysis},
+} 
 @book{Florac1999,
     author =	"William A. Florac and Anita D. Carleton",
     title =		"Measuring the Software Process",
@@ -571,7 +588,6 @@
     year = {1969},
     note = {\url{http://homepages.cs.ncl.ac.uk/brian.randell/NATO/nato1968.PDF}},
 } 
-
 @book{Parmenter2010,
 	author =	"David Parmenter",
 	title =		"Key Performance Indicators: developing, implementing, and using winning KPIs",
@@ -579,6 +595,17 @@
 	publisher =	"John Wiley and Sons, Inc.",
 	year =		"2010"
 }
+@book{PMD,
+    title={PMD Applied: An Easy-to-use Guide for Developers},
+    author={Copeland, T.},
+    isbn={9780976221418},
+    lccn={2005907843},
+    series={An easy-to-use guide for developers},
+    url={http://books.google.com/books?id=Pj\_8AAAACAAJ},
+    year={2005},
+    publisher={Centennial Books}
+}
+
 @ONLINE{promise12,
      title  = "The PROMISE Repository of empirical software engineering data",
      month  = "June",
