some section changes in chapter 3

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -173,7 +173,7 @@
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %% AUTHOR MUST MODIFY
-\def\yourtitle{SCORING A SOFTWARE DEVELOPMENT ORGANIZATION}
+\def\yourtitle{SCORING A SOFTWARE DEVELOPMENT ORGANIZATION \\WITH A SINGLE NUMBER}
 \def\yourname{RYAN M. SWANSTROM}
 \def\yourmajor{Computational Science and Statistics}
 \def\youradvisor{Dr. Gary Hatfield}
