--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -18,11 +18,12 @@ A metric can be defined as the science of indirect measurement.
         in the software code
         \item Source Code Analysis - Tools that determine whether 
         code adheres to specified set of rules. Common 
-        examples are PMD and findbugs \cite{PMD, Findbugs}.
+        examples are PMD and FindBugs$^{TM}$ \cite{PMD, Findbugs}.
     \end{itemize}
 
 Data Driven Software Engineering not Data Driven Software Development
 
+\subsection{INDICATORS}
 Performance indicators can be crucial measurements
 within any business setting, and an SDO is no exception. Many
 SDOs struggle to determine the correct indicators to track and
@@ -41,32 +42,32 @@ More information on the indicators can be found
 in chapter 1 of \cite{parmenter2010}
 as well as \cite{florac1999,kaplan1992}.
 
-\subsection{RESULT INDICATORS FOR SDO}
+\subsubsection{RESULT INDICATORS FOR SDO}
     This section will cover the potential result indicators for an SDO.
     
-\subsection{KEY RESULT INDICATORS FOR SDO}
+\subsubsection{KEY RESULT INDICATORS FOR SDO}
 
 
-\subsection{PERFORMANCE INDICATORS FOR SDO}
+\subsubsection{PERFORMANCE INDICATORS FOR SDO}
     This section will cover the potential performance indicators for an SDO.
     
     
-\subsection{KEY PERFORMANCE INDICATORS FOR SDO}
+\subsubsection{KEY PERFORMANCE INDICATORS FOR SDO}
     
 
 \subsection{BALANCED SCORECARD}
 
 A common technique for organization to measure themselves is a balanced scorecard.
-A \textit{balanced scorecard} must contain the following
+A \textit{balanced scorecard} must contain the following six
 characteristics.
-\begin{itemize}
+\begin{enumerate}
   \item Financial 
   \item Customer Focus
   \item Environment/Community
   \item Internal Process
   \item Employee Satisfaction
   \item Learning and Growth
-\end{itemize}
+\end{enumerate}
 
 Balanced scorecards are great for displaying the important information about
 and organization.  However, a balanced scorecard does not specify what
@@ -75,15 +76,7 @@ it does not produce a single number.
 
 This info comes from \cite{parmenter2010}.
 
-\subsection{POSSIBLE DATA POINTS FOR LEVEL OF EFFORT}
-
-\begin{description}
-    \item[Actual Development Hours] Actual Hours Spent on development
-    \item[Estimated Development Hours]  Initial Hours estimated for a project, this will commonly be different from the actual development hours
-    \item[Source Lines Of Code (SLOC)]  This is count of the total number of lines of source code
-    \item[Modified Lines Of Code] This is a count of the number of modified lines of source code. This number is a sum of the deleted, added, and modified lines of source code.
-\end{description}
-
+\subsection{PROJECT MANAGEMENT MEASUREMENT}
 According to Putnam and Myers in \cite{Putnam2013}, the 5 core measurements for managing software
 projects are:
 
@@ -125,5 +118,14 @@ value called an MPI (Master Performance Indicator)?  The field
 of sports analytics also has numerous techniques for combining
 multiple indicators to produce a single number \cite{Cervone2014}.
 
+
+\subsection{POSSIBLE DATA POINTS FOR LEVEL OF EFFORT}
+
+\begin{description}
+    \item[Actual Development Hours] Actual Hours Spent on development
+    \item[Estimated Development Hours]  Initial Hours estimated for a project, this will commonly be different from the actual development hours
+    \item[Source Lines Of Code (SLOC)]  This is count of the total number of lines of source code
+    \item[Modified Lines Of Code] This is a count of the number of modified lines of source code. This number is a sum of the deleted, added, and modified lines of source code.
+\end{description}
 
 \end{document}
