rearrangement for steps of SDLC

--- a/SDSUThesis.tex
+++ b/SDSUThesis.tex
@@ -112,6 +112,7 @@
 \usepackage{booktabs}
 % for clever references
 \usepackage{cleveref}
+\usepackage[ampersand]{easylist}
 
 % to center column headings
 \usepackage[up,tiny,center,uppercase]{titlesec}
