--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -169,6 +169,39 @@ This is the definition used for the remainder of this work.
                 development lifecycle.
         \end{description}
         
+        
+The WHAT of SDLC - These are the steps of SDLC that need to be completed for each project.
+
+\begin{easylist}[itemize]
+    & Identify the Work/Task/Project
+    && Get Initial Idea 
+    && Obtain Details
+    & Estimate
+    && Create an Estimate (What is included? What is the output? days/dollars/hours/reqs)
+    &&Obtain Approval 
+    && Quit or Go Forward
+    & Document Requirements
+    && Identify the Requirements
+    && Detail the Requirements
+    & Design The Software
+    && Find System Integrations
+    && Identify Functional Specs
+    && Detail the Functional Specs
+    & Development of all the tasks in Design and Requirements
+    && Identify the Coding Tasks
+    && Write the Code/Develop the solution
+    && Write the Unit Tests
+    & Test
+    && Create Test Plans and Cases
+    && Run Test Plans and Cases
+    & Deployment
+    && Create Deployment Steps
+    && Run Deployment Steps
+    & Maintenance
+    && Capture Bugs
+    && Survey Users
+\end{easylist}
+        
 \subsection{WHAT IS SOFTWARE ENGINEERING?}
     \textit{Software Engineering} as a term dates back to the 
     1968 North Atlantic Treaty Organization (NATO) conference \cite{Tsui2013, Naur1969}. Over the 
@@ -185,6 +218,9 @@ This is the definition used for the remainder of this work.
 \subsection{TERMINOLOGY}
 
 \begin{description}
+
+    \item[App] (Application) - a software system or a collection of other apps, item[Project] - A body of work involving zero or more apps in preparation for a release, infrastructure upgrades can be a project but no specific app is involved
+    \item[Release] - A collection of projects being put in production on a specified date
     \item[SIT]   (Systems Integration Testing) - The initial step of testing
         after the development phase of the SDLC.  This is typically 
         performed by members of the SDO.  It is validation that all the
