capitalize some table and image names

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -45,14 +45,17 @@
     Software development organizations need a framework to define
     what measurements should be tracked and how those measurements
     should be reported.  The MPI framework provides a solid foundation
-    for a consistent evaluation.  It should also provide a broad
+    for a consistent evaluation.  MPI analyzes the historical performance
+    of an SDO
+    to create a baseline in order to provide a broad
     view of the overall organization.  It is common for software development
     organizations to measure and focus soley on the source code
     being produced.  However, a software development organization does more
     than just produce source code.  There is documentation to be
     written, testcases to be created, systems to be deployed, and
     decisions to be made.  The framework provides an evaluation
-    of the overall software development organization.
+    of the overall software development organization, not just the
+    source code.
     
     The framework will produce a single number score for each of 
     the five result indicators as well as a single overall score.  
@@ -189,7 +192,7 @@
     \begin{figure}[ht]
         \centering
         \includegraphics[scale=.7]{images/cmmi.png}
-        \caption[Characteristics of CMMI]{Characteristics of CMMI, 
+        \caption[CHARACTERISTICS OF CMMI]{Characteristics of CMMI, 
             image adapted from  \cite{Godfrey} }
         \label{fig:cmmi}
     \end{figure}
