--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -46,7 +46,7 @@ This is the definition used for the remainder of this work.
         \begin{figure}[ht]
             \centering
             \includegraphics[scale=.5]{images/benington_waterfall.PNG}
-            \caption[Benington's original diagram for producing large software systems]
+            \caption[BENINGTON'S ORIGINAL DIAGRAM FOR PRODUCING LARGE SOFTWARE SYSTEMS]
                     {Benington's original diagram for producing large software 
                         systems, adapted from \cite{Benington1987}}
             \label{fig:benington}
@@ -54,7 +54,7 @@ This is the definition used for the remainder of this work.
         \begin{figure}[ht]
             \centering
             \includegraphics[scale=.5]{images/royce_waterfall.PNG}
-            \caption[Royce's version of the waterfall model]
+            \caption[ROYCE'S VERSION OF THE WATERFALL MODEL]
                 {Royce's version of the waterfall model for producing software 
                         systems, adapted from \cite{Royce1987}}
             \label{fig:royce}
@@ -68,7 +68,7 @@ This is the definition used for the remainder of this work.
         \begin{figure}[ht]
             \centering
             \includegraphics[scale=.6]{images/waterfall.png}
-            \caption[Modern Waterfall]
+            \caption[MODERN WATERFALL]
                 {Modern Waterfall Diagram, adapted from \cite{Hibbs2009} }
             \label{fig:waterfall}
         \end{figure}
@@ -107,7 +107,7 @@ This is the definition used for the remainder of this work.
         \begin{figure}[here]
             \centering
             \includegraphics[scale=.5]{images/spiral_model.png}
-            \caption[Spiral SDLC Model]{Spiral SDLC Model \cite{Boehm2000} }
+            \caption[SPIRAL SDLC MODEL]{Spiral SDLC Model \cite{Boehm2000} }
             \label{fig:spiral}
         \end{figure}
         
