--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -65,7 +65,7 @@ Expected Percent Uptime & Float & Required \\
 
 \bottomrule
 
-\caption{Availability - Inputs}
+\caption{AVAILABILITY - INPUTS}
 \label{tab:avail}
 \end{longtable}
 
@@ -126,7 +126,7 @@ Defects in PROD & Integer  & Required \\
 
 \bottomrule
 
-\caption{Quality - Inputs}
+\caption{QUALITY - INPUTS}
 \label{tab:quality}
 \end{longtable}
 
@@ -190,7 +190,7 @@ Response Date & Date & Optional \\
 
 \bottomrule
 
-\caption{Satisfaction - Inputs}
+\caption{SATISFACTION - INPUTS}
 \label{tab:satisfaction}
 \end{longtable}
 
@@ -327,7 +327,7 @@ Actual Finish Date & Date  & Required \\
 
 \bottomrule
 
-\caption{Schedule - Inputs}
+\caption{SCHEDULE - INPUTS}
 \label{tab:sched}
 \end{longtable}
 
@@ -366,7 +366,7 @@ Actual Requirements Released & Integer  & Required \\
 
 \bottomrule
 
-\caption{Requirements - Inputs}
+\caption{REQUIREMENT - INPUTS}
 \label{tab:req}
 \end{longtable}
 
