--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -6,11 +6,12 @@
 
 In order for an SDO to properly track the elements of MPI, a data storage system should be available to store the appropriate data.   This storage system will be named the SDLC Analytic Engine (SDLC-AE). Figure \ref{fig:sdlc-ae} provides an overview of the data that could potentially be stored in the SDLC-AE.
 
-The SDLC-AE would make gamification of the SDLC attainable.  
+Once all the SDLC data is collected into a single place, there are many possible applications.  Software analytics
+will be much easier to create and gamification will be much more easily attainable.  
 
 \begin{figure}[ht]
 \includegraphics[scale=.7]{images/sdlc-ae.png}
-\caption{SDLC Analytic Engine}
+\caption{SDLC ANALYTIC ENGINE}
 \label{fig:sdlc-ae}
 \end{figure}
 
