--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -230,16 +230,14 @@ The WHAT of SDLC - These are the steps of SDLC that need to be completed for eac
         validate the software system. Once validation has occured for
         UAT, the software system is ready to proceed to production
     \item[PROD]  (Production) - The software has been released to the final audience.
-    \item[defect] Whenever the output of software does not meet expectations.  It is important to mention that even though defects are typically 
+    \item[defect] ``A software defect is a bug or error that causes
+                software to either stop operating or to produce
+                invalid or unacceptable results'' as quoted from
+            \cite{Jones2009}.  It is important to mention that even though defects are typically 
             found in the computer code, a defect should not be isolated to just code.   A poorly written requirement or missed test cases can 
             both be considered a defect.  Other common names for a defect are: bug, error, fault, or ticket.
             
-            ``
-                A software defect is a bug or error that causes
-                software to either stop operating or to produce
-                invalid or unacceptable results.
-            '' as quoted from
-            \cite{Jones2009}.  Also in here is the 4 severity levels.  Also, current defect removal is only about 85\% and this value should be increased to about 95\%. 
+              Also in here is the 4 severity levels.  Also, current defect removal is only about 85\% and this value should be increased to about 95\%. 
 \end{description}
 
 Check these book \cite{Jones2009, Jones1996, Lee2003}. 
