--- a/appendices.tex
+++ b/appendices.tex
@@ -112,4 +112,6 @@ aggregate(SCORE ~ MONTH_DT, new_quality_data, mean)
 # dist of variables(hist used for guidance), associations among variables
 \end{lstlisting}}
 
+\subsection{}
+
 \end{document}
