--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -24,10 +24,10 @@ A metric can be defined as the science of indirect measurement.
 Data Driven Software Engineering not Data Driven Software Development
 
 \subsection{INDICATORS}
-Performance indicators can be crucial measurements
-within any business setting, and an SDO is no exception. Many
-SDOs struggle to determine the correct indicators to track and
-how to track them.  
+Indicators can be crucial measurements
+within any business setting, and an SDO is no exception. Determining
+the correct indicators for an organization can
+be difficult.  Software development organizations
 The differences between the indicators will be explored and
 possible measures for each indicator in an SDO will be
 presented.  The 4 different types of indicators are:
