--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -3,7 +3,8 @@
 
 \section{MEASURING A SDO}
 
-Anything can be measured \cite{Hubbard2010}.
+Anything can be measured \cite{Hubbard2010}.  An SDO
+how numerous metrics.
 
 A metric can be defined as the science of indirect measurement.
     The following are some examples of metrics that can be collected 
