--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -78,14 +78,14 @@
     and appraisal program for process 
     improvement.  It was created and is administered by the 
     Software Engineering Institute at
-    Carnegie Mellon University. While the CMMI is not specific to software development,
+    Carnegie Mellon University \cite{CMMI}. While the CMMI is not specific to software development,
     it is often applied in software development settings.
     CMMI certification is required for many United States Government 
     and Department of Defense contracts. 
     
     CMMI-Dev is a modification of the CMMI specific to the 
     development activities applied to products
-    and services \cite{CMMI}.  The practices covered in 
+    and services.  The practices covered in 
     CMMI-Dev include project management, 
     systems engineering, hardware engineering, process 
     management, software engineering, and 
@@ -152,7 +152,7 @@
                 \item Verification (VER)
             \end{itemize}
             
-        \item[CMMI MATURITY LEVEL 4 - QUALITATIVELY MANAGED]
+        \item[CMMI MATURITY LEVEL 4 - QUANTITATIVELY MANAGED]
             A maturity level 4 organization has quantitative 
             measures for quality and process performance. 
             The measures are based upon customer needs, 
@@ -198,7 +198,7 @@
     \end{figure}
 
     A visual description of the CMMI maturity levels can be seen in Figure \ref{fig:cmmi}.  
-    While CMMI-Dev does provide an excellent framework for improving a process.  It
+    While CMMI-Dev does provide an excellent framework for improving a process, it
     is wholely focused on process improvement.  It does not provide guidelines
     for evaluating the final product.  
     Also, it does not provide a specify mechanism for evaluating
