more typos fixed

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -231,8 +231,8 @@
     development practices such as desktop development, off the shelf components,
     and code reuse.  COCOMO provides a nice algorithm for making decisions
     regarding building or buying software products.  It does not provide 
-    an algorithms to review past performance of estimates and modify the
-    algorithm accordingly.  COCOMO II can be a useful tool for 
+    an algorithm to review and modify past performance 
+    based upon estimates.  COCOMO II can be a useful tool for 
     estimating the time and costs within an SDO,
     but it only provides an estimate and not an evaluation of the actual
     performance. 
@@ -349,7 +349,7 @@
     more computing time, has more lines of code, more documentation, 
     more hours spent on development, or some other arbitrary measure.}
     or more complex.  Thus, finding a value for quality is easier 
-    than interpreting that value.  Not matter the interpretation,
+    than interpreting that value.  No matter the interpretation,
     the goal is to release the number of problems with the software.
     Top 10 lists have been created for techniques to remove problems
     from software \cite{Boehm2001}.  
@@ -496,7 +496,7 @@
     properly implemented, an obvious next step is the
     application of gamification to software development. Gamification
     is ``the process of making activities more game-like'' \cite{Werbach2014}.
-    some of the benefits of gamification are higher productivity, competition,
+    Some of the benefits of gamification are higher productivity, competition,
     and greater enjoyment.  
     Prior attempts
     at gamification of software development focus only on 
