more typos fixed

--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -18,7 +18,7 @@ Software is more than just computer programs. According to Ian Sommerville \cite
 This is the definition used for the remainder of this work.
 
 
-\subsection{THE SOFTWARE DEVELOPMENT LIFECYCLE}
+\subsection{THE SOFTWARE DEVELOPMENT LIFE CYCLE}
     The discipline of software engineering has created a workflow for developing
     software.  
     This workflow is called the \textit{Software Development Life Cycle (SDLC)}.
@@ -87,7 +87,7 @@ This is the definition used for the remainder of this work.
         
         The spiral model for software development was presented by Boehm in 1986
         \cite{Boehm1986, Boehm1988}. 
-        The goal of the spiral mode of software development is very risk-driven.
+        The goal of the spiral model of software development is very risk-driven.
         A software project will start with many small and quick iterations. 
         Each iteration will cover the following 4 basic steps. 
         \begin{enumerate}
