--- a/references.bib
+++ b/references.bib
@@ -448,7 +448,7 @@
     author= {Jones, Capers},
     year = {2013},
     month = {July},
-    title = {{WHY ``COST PER DEFEC'' IS HARMFUL FOR SOFTWARE QUALITY}},
+    title = {{WHY ``COST PER DEFECT'' IS HARMFUL FOR SOFTWARE QUALITY}},
     howpublished = {\url{http://goo.gl/QUsvlw}},
     note = {Namecook Analytics Blog, accessed 01-Jan-2015  }
 }
