minor update to abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -29,8 +29,9 @@ produces software.  The score is not to be comparative between organizations, bu
 organization over time.  
 
 The primary goal of this work is to provide a general framework for what a software development organization
-should measure and how to report on those measurements.  The focus is scoring of the entire
-organization and not just the development efforts.  The secondary goal of this work is to provide
+should measure and how to report on those measurements.  The focus is providing a single number
+to represnet the entire
+organization and not just the development efforts.  That single number is considered the MPI score. The secondary goal of this work is to provide
 a software implementation of that framework.
 
 \end{document}
