--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -269,7 +269,7 @@
     Then small pilot groups can be offered the upgrade, and the new logs will 
     be processed and evaluated. Thus, process mining can be beneficial for new 
     software implementation.  More research needs to be done applying
-    process mining to the other process involved with software development,
+    process mining to the other processes involved with software development,
     such as other documentation, testing, and implementation. 
     
     Although process mining can be useful for analyzing software
