increased image size

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -528,7 +528,7 @@ an overview of software, software development lifecycles, software engineering, 
 development organizations.  Chapter 3 introduces what is meant by the term data-driven
 software engineering. Chapter 4 then provides an explanation of the Master Performance 
 Indicator (MPI).  It will present the essential elements for calculating the MPI, as well
-as the formulas, frameworks, and data necessary to produce the MPI. Chapter 5 provides
+as the formulas, framework, and data necessary to produce the MPI. Chapter 5 provides
 a technological framework for generating and storing the current and historical MPI values.
 Chapter 6 demostrates how MPI can be implemented in a software development portion of 
 a large financial institution.  Chapter 7 concludes the dissertation with a summary
