--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -45,7 +45,7 @@ This is the definition used for the remainder of this work.
     
         \begin{figure}[ht]
             \centering
-            \includegraphics[scale=.5]{images/benington_waterfall.PNG}
+            \includegraphics[scale=.7]{images/benington_waterfall.PNG}
             \caption[BENINGTON'S ORIGINAL DIAGRAM FOR PRODUCING LARGE SOFTWARE SYSTEMS]
                     {Benington's original diagram for producing large software 
                         systems, adapted from \cite{Benington1987}}
@@ -53,7 +53,7 @@ This is the definition used for the remainder of this work.
         \end{figure}%
         \begin{figure}[ht]
             \centering
-            \includegraphics[scale=.5]{images/royce_waterfall.PNG}
+            \includegraphics[scale=.7]{images/royce_waterfall.PNG}
             \caption[ROYCE'S VERSION OF THE WATERFALL MODEL]
                 {Royce's version of the waterfall model for producing software 
                         systems, adapted from \cite{Royce1987}}
@@ -67,7 +67,7 @@ This is the definition used for the remainder of this work.
         A modern diagram of the waterfall model can be seen in Figure \ref{fig:waterfall}.
         \begin{figure}[ht]
             \centering
-            \includegraphics[scale=.6]{images/waterfall.png}
+            \includegraphics[scale=.9]{images/waterfall.png}
             \caption[MODERN WATERFALL]
                 {Modern Waterfall Diagram, adapted from \cite{Hibbs2009} }
             \label{fig:waterfall}
@@ -104,9 +104,9 @@ This is the definition used for the remainder of this work.
         iterations.
         Figure \ref{fig:spiral} provides a bit more detail on the iterations
         and the overall process. 
-        \begin{figure}[here]
+        \begin{figure}[ht]
             \centering
-            \includegraphics[scale=.5]{images/spiral_model.png}
+            \includegraphics[scale=.8]{images/spiral_model.png}
             \caption[SPIRAL SDLC MODEL]{Spiral SDLC Model \cite{Boehm2000} }
             \label{fig:spiral}
         \end{figure}
@@ -141,7 +141,7 @@ This is the definition used for the remainder of this work.
         
     \subsubsection{SDLC COMMONALITIES}
         Even with the large number of SDLC models currently being used by different SDOs,
-        there is still some commonalities among the models.  The 
+        many ommonalities exist among the models.  The 
         commonalities can be tied back to the steps of waterfall.  All of the models
         exhibit, to some degree, the following phases. The only major difference is 
         the scope, size, and duration of each phase.  For example, the spiral
