adding info about 3 focus areas and 3 questions

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -381,6 +381,7 @@
     
 
 \subsubsection{SOFTWARE ANALYTICS}
+\label{subsub:softwareanalytics}
 
     One area of research that is focusing on the evaluation 
     of software development organizations
@@ -405,20 +406,18 @@
     better decisions regarding software
     development \cite{Zhang2013}.  The three main focus areas of 
     software analytics are:
-    \begin{description}
-        \item[User Experience] - How can the software enable the 
+    \begin{enumerate}
+        \item \textbf{User Experience} - How can the software enable the 
             user to more easily or quickly 
             accomplish the task at hand?
-        \item[Quality] - How can the number of problems with 
+        \item \textbf{Quality} - How can the number of problems with 
             the software be decreased?
-        \item[Development Productivity] - How can the processes
+        \item \textbf{Development Productivity} - How can the processes
             or tools be modified to increase 
             the rate at which software is produced? 
-    \end{description}
-    The work presented later in this paper will address all three
-    focus areas.  
+    \end{enumerate}
 
-    Martin Shepperd in \cite{Hassan2013} identified 3 important questions that software
+    Later, Martin Shepperd in \cite{Hassan2013} identified 3 important questions that software
     analytics must address:
     \begin{enumerate}
         \item ``How much better is my model performing than 
@@ -429,7 +428,9 @@
     \end{enumerate}
     These are 3 important questions that should be addressed 
     when presenting any results in software analytics.  The research
-    needs to demonstrate clear advantages for practitioners.
+    needs to demonstrate clear advantages for practitioners.  The work
+    presented in this work will address both the 3 main focus areas and
+    the 3 important questions of software analytics.
 
     One of the software analytic techniques focuses specifically 
     on the source code; analyzing the 
