--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -24,6 +24,7 @@ A metric can be defined as the science of indirect measurement.
 
 Data Driven Software Engineering not Data Driven Software Development
 
+
 \subsection{INDICATORS}
 Indicators can be crucial measurements
 within any business setting, and an SDO is no exception. Determining
@@ -112,7 +113,7 @@ develop software.  The department has many other duties
 including: deploying software, installing server hardware/software,
 writing documentation, surveying users, and other things.
 
-\subsection{COMBINING THE MEASURES TO FORM MPI}
+\subsection{COMBINING THE MEASURES}
 
 How can the PIs, RIs, KRIs, and KPIs be combined to form a single
 value called an MPI (Master Performance Indicator)?  The field
