--- a/references.bib
+++ b/references.bib
@@ -588,6 +588,16 @@
     year = {1969},
     note = {\url{http://homepages.cs.ncl.ac.uk/brian.randell/NATO/nato1968.PDF}},
 } 
+@book{Olson2003,
+  title={Data Quality: The Accuracy Dimension},
+  author={Olson, J.E.},
+  isbn={9780080503691},
+  lccn={2002112508},
+  series={The Morgan Kaufmann Series in Data Management Systems},
+  url={https://books.google.com/books?id=x8ahL57VOtcC},
+  year={2003},
+  publisher={Elsevier Science}
+}
 @book{Parmenter2010,
 	author =	"David Parmenter",
 	title =		"Key Performance Indicators: developing, implementing, and using winning KPIs",
@@ -627,6 +637,15 @@
 	publisher =	"Addison-Wesley Professional",
 	year =		"2013"
 	month =     "July"
+}
+@inbook{Rost2011,
+  title={The Dark Side of Software Engineering: Evil on Computing Projects},
+  author={Rost, J. and Glass, R.L.},
+  chapter={2 Lying },
+  isbn={9780470922873},
+  url={http://books.google.com/books?id=f\_FyOg5XW\_IC},
+  year={2011},
+  publisher={Wiley}
 }
 @inproceedings{Royce1987,
     author = {Royce, W. W.},
