--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -4,7 +4,11 @@
 % All about the SDLC Analytic Engine
 \section{SDLC ANALYTIC ENGINE}
 
-In order for an SDO to properly track the elements of MPI, a data storage system should be available to store the appropriate data.   This storage system will be named the SDLC Analytic Engine (SDLC-AE). Figure \ref{fig:sdlc-ae} provides an overview of the data that could potentially be stored in the SDLC-AE.
+In order for an SDO to properly track the elements of MPI, a data storage system should be available to store the appropriate data.  A consistent storage system should help to avoid the problem of inaccurate
+data caused by numerous manipulations of the existing data \cite{Olson2003}. Plus, if the system
+is implemented correctly by allowing limited changes to existing data, it will be able to alliviate
+some of the dishonesty that is currently present in software projects \cite{Rost2011}. This storage system will be named the SDLC Analytic Engine (SDLC-AE). Figure \ref{fig:sdlc-ae} provides an overview of the data that could potentially be stored in the SDLC-AE.
+
 
 Once all the SDLC data is collected into a single place, there are many possible applications.  Software analytics
 will be much easier to create and gamification will be much more easily attainable.  
