finished tables for 3 focus areas and questions for software analytics

--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -440,7 +440,10 @@ How much better is my model performing than a naive strategy, such as guessing? 
 provides consistency which may not exist without it.  Therefore, MPI removes the 
 guesswork of measuring a software development organization. \\
 \myrowcolour%
-How practically significant are the results? &  \\
+How practically significant are the results? & The MPI score is consistent
+and easy to comprehend.  Thus comparison with past performance is quick 
+and simple.  This is a significant advantage for software 
+development organizations. \\
 How sensitive are the results to small changes in one or more of the inputs? & 
 The question was extensively addressed in section \ref{sub:sensitivity}.  It appears MPI is
 not overly sensitive to small changes in the inputs.\\
