--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -511,7 +511,7 @@
     development could be implemented simultaneously with a gamification
     strategy. Both will require new collections of data and new reporting.
 
-    So it has been shown, there exist many attempts to 
+    Overall, there exist many attempts to 
     evaluate portions of the a software development 
     organization.  None of the the attempts provide
     a single number score for the entirety of the 
