--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -212,8 +212,8 @@ The WHAT of SDLC - These are the steps of SDLC that need to be completed for eac
     
     
     Software engineering has struggled to determine the correct projects to complete \cite{DeMarco2009}.
-    Software projects are typically behind schedule and over budget. Organizations need a better
-    technique to understand the past performance so they can better predict the future performance.
+    Software projects are commonly behind schedule and over budget. Organizations need a better
+    technique to understand the past performance so they can better predict the future performance \cite{Lehtinen2014}.
 
 \subsection{TERMINOLOGY}
 
