--- a/references.bib
+++ b/references.bib
@@ -497,7 +497,25 @@
     publisher = {Springer-Verlag New York, Inc.},
     address = {Secaucus, NJ, USA},
 } 
-
+@article{Lehtinen2014,
+ author = {Lehtinen, Timo O. A. and M\"{a}ntyl\"{a}, Mika V. and Vanhanen, Jari and Itkonen, Juha and Lassenius, Casper},
+ title = {Perceived Causes of Software Project Failures - An Analysis of Their Relationships},
+ journal = {Journal Information and Software Technology},
+ issue_date = {June, 2014},
+ volume = {56},
+ number = {6},
+ month = jun,
+ year = {2014},
+ issn = {0950-5849},
+ pages = {623--643},
+ numpages = {21},
+ url = {http://dx.doi.org/10.1016/j.infsof.2014.01.015},
+ doi = {10.1016/j.infsof.2014.01.015},
+ acmid = {2599045},
+ publisher = {Butterworth-Heinemann},
+ address = {Newton, MA, USA},
+ keywords = {Cause and effect relationships, Multiple case study, Root cause analysis, Software project failure},
+} 
 @inproceedings{Letier2013,
     title={Measure What Counts: An Evaluation Pattern for Software Data Analysis},
     author={Letier, Emmanuel and Fitzgerald, Camilo},
