--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -211,9 +211,13 @@ The WHAT of SDLC - These are the steps of SDLC that need to be completed for eac
     \cite{Ieee1990}.
     
     
-    Software engineering has struggled to determine the correct projects to complete \cite{DeMarco2009}.
-    Software projects are commonly behind schedule and over budget. Organizations need a better
-    technique to understand the past performance so they can better predict the future performance \cite{Lehtinen2014}.
+    Software engineering has struggled to determine the correct projects 
+    to complete \cite{DeMarco2009}.
+    Software projects are commonly behind schedule and over budget \cite{Lehtinen2014, 
+    Charette2005,Jorgensen2013,Ichu2012} with nearly 20\% of projects
+    in the United States still failing \cite{Emam2008}. Organizations need a better
+    technique to understand the past performance so they can better 
+    predict the future performance.
 
 \subsection{TERMINOLOGY}
 
