--- a/references.bib
+++ b/references.bib
@@ -59,11 +59,11 @@
 @article{Boehm1986,
     author = {Boehm, B},
     title = {A Spiral Model of Software Development and Enhancement},
-    journal = {SIGSOFT Softw. Eng. Notes},
+    journal = {SIGSOFT Software Engineering Notes},
     issue_date = {August 1986},
     volume = {11},
     number = {4},
-    month = aug,
+    month = {August},
     year = {1986},
     issn = {0163-5948},
     pages = {14--24},
@@ -111,7 +111,7 @@
     issue_date = {January 2001},
     volume = {34},
     number = {1},
-    month = jan,
+    month = {January},
     year = {2001},
     issn = {0018-9162},
     pages = {135--137},
@@ -163,6 +163,19 @@
     month={February},
     year={2014}
 }
+@ARTICLE{Charette2005,
+    author={Charette, R.N.},
+    journal={IEEE Spectrum},
+    title={Why software fails [software failure]},
+    year={2005},
+    month={September},
+    volume={42},
+    number={9},
+    pages={42-49},
+    keywords={project management;risk management;software reliability;failure prevention;project management;risk management;software failure;software projects management;Business;Companies;Computer crashes;Costs;FAA;History;Information technology;Investments;Merchandise;Programmable control},
+    doi={10.1109/MSPEC.2005.1502528},
+    ISSN={0018-9235}
+}
 @techreport{CMMI,
     author = { {CMMI Product Team} },
     title = { {CMMI for Development, Version 1.3} },
@@ -200,7 +213,7 @@
     issue_date = {July 2009},
     volume = {26},
     number = {4},
-    month = July,
+    month = {July},
     year = {2009},
     issn = {0740-7459},
     pages = {96--96},
@@ -215,11 +228,11 @@
 @article{Ebert1999,
     author = {Ebert, Christof and Liedtke, Thomas and Baisch, Ekkehard},
     title = {Improving Reliability of Large Software Systems},
-    journal = {Ann. Softw. Eng.},
+    journal = {Annals of Software Engineering},
     issue_date = {1999},
     volume = {8},
     number = {1-4},
-    month = aug,
+    month = {August},
     year = {1999},
     issn = {1022-7091},
     pages = {3--51},
@@ -229,6 +242,25 @@
     acmid = {590673},
     publisher = {J. C. Baltzer AG, Science Publishers},
     address = {Red Bank, NJ, USA},
+} 
+@article{Emam2008,
+    author = {Emam, Khaled El and Koru, A. G\"{u}nes},
+    title = {A Replicated Survey of IT Software Project Failures},
+    journal = {IEEE Software},
+    issue_date = {September 2008},
+    volume = {25},
+    number = {5},
+    month = {September},
+    year = {2008},
+    issn = {0740-7459},
+    pages = {84--90},
+    numpages = {7},
+    url = {http://dx.doi.org/10.1109/MS.2008.107},
+    doi = {10.1109/MS.2008.107},
+    acmid = {1439231},
+    publisher = {IEEE Computer Society Press},
+    address = {Los Alamitos, CA, USA},
+    keywords = {productivity, programming teams, project control and modeling, review and evaluation, risk management, schedule and organizational issues, software engineering management, software engineering management, productivity, programming teams, project control and modeling, review and evaluation, risk management, schedule and organizational issues},
 } 
 @article{Faizan2012,
     title={Contemporary trends in defect prevention: A survey report},
@@ -265,10 +297,10 @@
 }
 @ARTICLE{Genuchten2014,
     author={van Genuchten, M. and Mans, R. and Reijers, H. and Wismeijer, D.},
-    journal={Software, IEEE},
+    journal={IEEE Software},
     title={Is Your Upgrade Worth It? Process Mining Can Tell},
     year={2014},
-    month={Sept},
+    month={September},
     volume={31},
     number={5},
     pages={94-100},
@@ -278,10 +310,10 @@
 }
 @ARTICLE{Giardino2014,
     author={Giardino, C. and Unterkalmsteiner, M. and Paternoster, N. and Gorschek, T. and Abrahamsson, P.},
-    journal={Software, IEEE},
+    journal={IEEE Software},
     title={What Do We Know about Software Development in Startups?},
     year={2014},
-    month={Sept},
+    month={September},
     volume={31},
     number={5},
     pages={28-32},
@@ -316,11 +348,11 @@
 @article{Halkidi2011,
     author = {Halkidi, M. and Spinellis, D. and Tsatsaronis, G. and Vazirgiannis, M.},
     title = {Data Mining in Software Engineering},
-    journal = {Intell. Data Anal.},
+    journal = {Intelligent Data Analysis},
     issue_date = {August 2011},
     volume = {15},
     number = {3},
-    month = aug,
+    month = {August},
     year = {2011},
     issn = {1088-467X},
     pages = {413--441},
@@ -359,11 +391,11 @@
 @article{Hassan2013,
     author = {Hassan, Ahmed E. and Hindle, Abram and Runeson, Per and Shepperd, Martin and Devanbu, Prem and Kim, Sunghun},
     title = {Roundtable: What's Next in Software Analytics},
-    journal = {IEEE Softw.},
+    journal = {IEEE Software},
     issue_date = {July 2013},
     volume = {30},
     number = {4},
-    month = jul,
+    month = {July},
     year = {2013},
     issn = {0740-7459},
     pages = {53--56},
@@ -391,11 +423,19 @@
     year={2010},
     publisher={Wiley}
 }
+@book{Ichu2012,
+    author = {Ichu, Emmanuel Austen},
+    title = {The Role of Quality Assurance in Software Development Projects: Software Project Failures and Business Performance},
+    year = {2012},
+    isbn = {3659169609, 9783659169601},
+    publisher = {LAP Lambert Academic Publishing},
+    address = {Germany},
+} 
 @ARTICLE{Ieee1990,
     journal={{IEEE Std 610.12-1990}},
     title={{IEEE Standard Glossary of Software Engineering Terminology}},
     year={1990},
-    month={Dec},
+    month={December},
     pages={1-84},
     keywords={glossaries;software engineering;standards;IEEE Std 610.12-1990;software engineering terminology;standard glossary;Software engineering;Standards;Terminology;Definitions;Software engineering;dictionary;glossary;terminology},
     doi={10.1109/IEEESTD.1990.101064}
@@ -403,7 +443,7 @@
 @article{Jain2013,
 	author = 	{Anuj Jain and Sarika Angadi},
 	title =		{Gamifiying software development process},
-	year =		{2013",
+	year =		{2013},
     volume = {11},
     number = {3},
 	journal =	{Infosys Labs Briefings},
@@ -413,11 +453,11 @@
 @article{Jacobson2014,
     author = {Jacobson, Ivar and Seidewitz, Ed},
     title = {A New Software Engineering},
-    journal = {Commun. ACM},
+    journal = {Communications of the ACM},
     issue_date = {December 2014},
     volume = {57},
     number = {12},
-    month = nov,
+    month = {November},
     year = {2014},
     issn = {0001-0782},
     pages = {49--54},
@@ -430,8 +470,9 @@
 } 
 @book{Jones1996,
     author = {Jones, Capers},
-    title = {Applied Software Measurement (2nd Ed.): Assuring Productivity and Quality},
+    title = {Applied Software Measurement: Assuring Productivity and Quality},
     year = {1997},
+    edition = {2nd},
     isbn = {0-07-032826-9},
     publisher = {McGraw-Hill, Inc.},
     address = {Hightstown, NJ, USA},
@@ -461,12 +502,29 @@
     publisher = {McGraw-Hill, Inc.},
     address = {New York, NY, USA},
 } 
+@inproceedings{Jorgensen2013,
+    author = {J{\o}rgensen, Magne},
+    title = {A Strong Focus on Low Price when Selecting Software Providers Increases the Likelihood of Failure in Software Outsourcing Projects},
+    booktitle = {Proceedings of the 17th International Conference on Evaluation and Assessment in Software Engineering},
+    series = {EASE '13},
+    year = {2013},
+    isbn = {978-1-4503-1848-8},
+    location = {Porto de Galinhas, Brazil},
+    pages = {220--227},
+    numpages = {8},
+    url = {http://doi.acm.org/10.1145/2460999.2461033},
+    doi = {10.1145/2460999.2461033},
+    acmid = {2461033},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {Dunning-Kruger effect, adverse selection, bidding, project failures, provider selection, software cost estimation, winner's curse},
+} 
 @ARTICLE{Jorgensen2014,
     author={Jorgensen, M.},
-    journal={Software, IEEE},
+    journal={IEEE Software},
     title={What We Do and Don't Know about Software Development Effort Estimation},
     year={2014},
-    month={Mar},
+    month={March},
     volume={31},
     number={2},
     pages={37-40},
@@ -498,28 +556,28 @@
     address = {Secaucus, NJ, USA},
 } 
 @article{Lehtinen2014,
- author = {Lehtinen, Timo O. A. and M\"{a}ntyl\"{a}, Mika V. and Vanhanen, Jari and Itkonen, Juha and Lassenius, Casper},
- title = {Perceived Causes of Software Project Failures - An Analysis of Their Relationships},
- journal = {Journal Information and Software Technology},
- issue_date = {June, 2014},
- volume = {56},
- number = {6},
- month = jun,
- year = {2014},
- issn = {0950-5849},
- pages = {623--643},
- numpages = {21},
- url = {http://dx.doi.org/10.1016/j.infsof.2014.01.015},
- doi = {10.1016/j.infsof.2014.01.015},
- acmid = {2599045},
- publisher = {Butterworth-Heinemann},
- address = {Newton, MA, USA},
- keywords = {Cause and effect relationships, Multiple case study, Root cause analysis, Software project failure},
+    author = {Lehtinen, Timo O. A. and M\"{a}ntyl\"{a}, Mika V. and Vanhanen, Jari and Itkonen, Juha and Lassenius, Casper},
+    title = {Perceived Causes of Software Project Failures - An Analysis of Their Relationships},
+    journal = {Journal Information and Software Technology},
+    issue_date = {June, 2014},
+    volume = {56},
+    number = {6},
+    month = {June},
+    year = {2014},
+    issn = {0950-5849},
+    pages = {623--643},
+    numpages = {21},
+    url = {http://dx.doi.org/10.1016/j.infsof.2014.01.015},
+    doi = {10.1016/j.infsof.2014.01.015},
+    acmid = {2599045},
+    publisher = {Butterworth-Heinemann},
+    address = {Newton, MA, USA},
+    keywords = {Cause and effect relationships, Multiple case study, Root cause analysis, Software project failure},
 } 
 @inproceedings{Letier2013,
     title={Measure What Counts: An Evaluation Pattern for Software Data Analysis},
     author={Letier, Emmanuel and Fitzgerald, Camilo},
-    booktitle={Data Analysis Patterns in Software Engineering (DAPSE), 2013 1st International Workshop on},
+    booktitle={2013 1st International Workshop on Data Analysis Patterns in Software Engineering (DAPSE)},
     pages={20--22},
     year={2013},
     organization={IEEE}
@@ -531,7 +589,7 @@
     issue_date = {May 2012},
     volume = {2},
     number = {5},
-    month = may,
+    month = {May},
     year = {2012},
     issn = {2277-128X},
     pages = {285--290},
@@ -561,7 +619,7 @@
     journal={IEEE Transactions on Software Engineering}, 
     title={A Complexity Measure}, 
     year={1976}, 
-    month={Dec}, 
+    month={December}, 
     volume={SE-2}, 
     number={4}, 
     pages={308-320}, 
@@ -570,7 +628,7 @@
 }
 @INPROCEEDINGS{Menzies2012, 
     author={Menzies, T. and Zimmermann, T.}, 
-    booktitle={Software Engineering (ICSE), 2012 34th International Conference on}, 
+    booktitle={2012 34th International Conference on Software Engineering (ICSE)}, 
     title={Goldfish bowl panel: Software development analytics}, 
     year={2012}, 
     month={June}, 
@@ -579,9 +637,9 @@
 @article{Miguel2014,
     author={Jos\'{i} P. Miguel and David Mauricio and Glen Rodr\'{i}guez}, 
     journal={International Journal of Software Engineering \& Applications (IJSEA)}, 
-    title={A REVIEW OF SOFTWARE QUALITY MODELS FOR THE EVALUATION OF SOFTWARE PRODUCTS }, 
+    title={A Review Of Software Quality Models For The Evaluation Of Software Products }, 
     year={2014}, 
-    month={Nov}, 
+    month={November}, 
     volume={5}, 
     number={6}, 
     pages={31-54}, 
@@ -718,7 +776,7 @@
     issue_date = {May 2010},
     volume = {35},
     number = {3},
-    month = may,
+    month = {May},
     year = {2010},
     issn = {0163-5948},
     pages = {8--13},
@@ -777,11 +835,11 @@
 @article{Taylor2010,
     author = {Taylor, Quinn and Giraud\&\#45;Carrier, Christophe},
     title = {Applications of Data Mining in Software Engineering},
-    journal = {Int. J. Data Anal. Tech. Strateg.},
+    journal = {International Journal of Data Analysis Techniques and Strategies},
     issue_date = {July 2010},
     volume = {2},
     number = {3},
-    month = jul,
+    month = {July},
     year = {2010},
     issn = {1755-8050},
     pages = {243--257},
@@ -831,7 +889,7 @@
     issue_date = {July 2012},
     volume = {3},
     number = {2},
-    month = jul,
+    month = {July},
     year = {2012},
     issn = {2158-656X},
     pages = {7:1--7:17},
@@ -904,11 +962,11 @@
 @article{Zhang2013,
     author = {Zhang, Dongmei and Han, Shi and Dang, Yingnong and Lou, Jian-Guang and Zhang, Haidong and Xie, Tao},
     title = {Software Analytics in Practice},
-    journal = {IEEE Softw.},
+    journal = {IEEE Software},
     issue_date = {September 2013},
     volume = {30},
     number = {5},
-    month = sep,
+    month = {September},
     year = {2013},
     issn = {0740-7459},
     pages = {30--37},
