changing url style in references, now the font is the same

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -11,6 +11,9 @@ REFERENCES\\
 % http://www.math.uiuc.edu/~hildebr/tex/bibliographies.html
 % http://www.andy-roberts.net/misc/latex/latextutorial3.html
 
+% set the style of links to match the style of text
+\urlstyle{same}
+
 {\def\section*#1{}
     \addcontentsline{toc}{section}{REFERENCES}
     \bibliographystyle{acm}
